--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.0.0
 Flask-SocketIO==5.3.6
+flask-cors==4.0.0
+gunicorn==21.2.0
 pandas==2.1.4
 numpy==1.26.2
 scikit-learn==1.3.2
@@ -7,54 +9,7 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 python-dotenv==1.0.0
 Werkzeug==3.0.1
-gunicorn==21.2.0
 APScheduler==3.10.4
 schedule==1.2.0
 plotly==5.17.0
 python-telegram-bot==20.6
-APScheduler
-Flask-SocketIO
-gunicorn
-plotly
-python-dotenv
-python-telegram-bot
-schedule
-telegram
-APScheduler
-Flask-SocketIO
-gunicorn
-plotly
-python-dotenv
-python-telegram-bot
-schedule
-flask-cors
-apscheduler
-beautifulsoup4
-flask
-flask-cors
-flask-socketio
-gunicorn
-numpy
-pandas
-plotly
-python-dotenv
-python-telegram-bot
-requests
-schedule
-scikit-learn
-werkzeug
-apscheduler
-beautifulsoup4
-flask
-flask-cors
-flask-socketio
-gunicorn
-numpy
-pandas
-plotly
-python-dotenv
-python-telegram-bot
-requests
-schedule
-scikit-learn
-werkzeug
