--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,8 @@
-# Use Python 3.11 (stable with all your dependencies)
-FROM python:3.11-slim
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set working directory
-WORKDIR /app
-
-# Install system dependencies (for pandas, numpy, etc.)
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    gcc \
-    libffi-dev \
-    libssl-dev \
-    libxml2-dev \
-    libxslt1-dev \
-    libpq-dev \
-    python3-dev \
-    git \
-    && apt-get clean
-
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
-
-# Copy app files
-COPY . .
-
-# Expose port for Render
-ENV PORT 10000
-
-# Start Flask app using Gunicorn with SocketIO support (eventlet)
-CMD ["gunicorn", "--worker-class", "eventlet", "-w", "1", "-b", "0.0.0.0:10000", "app:app"]
+flask>=2.3
+flask-socketio
+flask-cors
+python-dotenv
+pandas==2.2.2
+numpy>=1.24
+cython>=3.0.0
+eventlet==0.33.3
