--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-flask>=2.3
-flask-socketio
-flask-cors
-python-dotenv
-pandas==2.2.2
-numpy>=1.24
-cython>=3.0.0
+Flask==3.0.0
+Flask-SocketIO==5.3.6
+flask-cors==4.0.0
+gunicorn==21.2.0
 eventlet==0.33.3
+pandas==2.2.2
+numpy==1.26.2
+scikit-learn==1.3.2
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-dotenv==1.0.0
+Werkzeug==3.0.1
+APScheduler==3.10.4
+schedule==1.2.0
+plotly==5.17.0
