--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-flask
-flask_socketio
-flask_cors
+pandas==2.2.2
+numpy==1.24.4
+requests==2.31.0
+beautifulsoup4==4.12.3
+scikit-learn==1.3.2
+xgboost==2.0.3
+tensorflow==2.15.0
+keras==2.15.0
+joblib==1.3.2
+python-telegram-bot==13.15
 python-dotenv
-pandas
-numpy
-gunicorn
-requests
-bs4
